test_programs/compile_failure/noirc_frontend_tests_ban_mutable_globals/src/main.nr

        mut global FOO: Field = 0;
        fn main() {
            let _ = FOO; // silence FOO never used warning
        }
    